--- a/style/runs.module.scss
+++ b/style/runs.module.scss
@@ -3,11 +3,11 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-}
 
-.table > div {
-  flex: 33.33% 0 0;
-  border-right: 1px solid var(--creme);
-  z-index: 999;
-  text-align: center;
+  > div {
+    border-right: 1px solid var(--creme);
+    z-index: 999;
+    text-align: center;
+    flex: 0 0 33.33%;
+  }
 }
