--- a/style/newrun.module.scss
+++ b/style/newrun.module.scss
@@ -28,8 +28,9 @@
   background-color: transparent;
   color: var(--creme);
   text-align: right;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Courier Prime', monospace;
   width: 75px;
+  font-size: var(--font-size-body);
 }
 
 .newRun button {
