--- a/style/style.scss
+++ b/style/style.scss
@@ -3,10 +3,13 @@
   --blue: #457b9d;
   --blue-light: #a8dadc;
   --blue-dark: #1d3557;
+  --green: #50FFB1;
   --creme: #f1faee;
   --spacing-s: 10px;
   --icon-size: 20px;
   --icon-size-big: 40px;
+  --font-size-body: 16px;
+  --font-size-header: 24px;
 }
 
 html, body {
