--- a/style/header.module.scss
+++ b/style/header.module.scss
@@ -14,7 +14,7 @@
   float: left;
   margin: 0;
   padding: 0 15px;
-  font-size: 24px;
+  font-size: var(--font-size-header);
   line-height: 56px;
   font-weight: 400;
   color: #FFF;
