--- a/style/subheader.module.scss
+++ b/style/subheader.module.scss
@@ -4,6 +4,7 @@
   padding: var(--spacing-s);
   position: relative;
   background-color: var(--blue-dark);
+  border-bottom: 1px solid var(--creme);
 
   > div:first-child {
     flex: 0 0 66.6%;
