--- a/style/multipleruns.module.scss
+++ b/style/multipleruns.module.scss
@@ -1,4 +1,4 @@
-.date, .count, .pace, .distance, .duration {
+.date, .count, .pace, .distance, .duration, .vdot {
   font-family: 'Courier Prime', monospace;
   background: transparent none no-repeat var(--spacing-s) top;
   background-image: url("../assets/icons/clipboard-list.svg");
@@ -34,6 +34,10 @@
 
 .duration {
   background-image: url("../assets/icons/stopwatch.svg");
+}
+
+.vdot {
+  background-image: url("../assets/icons/star.svg");
 }
 
 div.legend {
