--- a/style/singlerun.module.scss
+++ b/style/singlerun.module.scss
@@ -72,3 +72,7 @@ div.legend {
 .distanceActive > .distance {
   background-color: var(--blue) !important;
 }
+
+.vdotActive > .vdot {
+  background-color: var(--blue) !important;
+}
