--- a/style/runs.module.scss
+++ b/style/runs.module.scss
@@ -1,5 +1,6 @@
 .table {
   overflow: scroll;
+  scroll-snap-type: x mandatory;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -20,5 +21,8 @@
     z-index: 999;
     text-align: center;
     flex: 0 0 33.3333%;
+
+    scroll-snap-align: end;
+    scroll-snap-stop: normal;
   }
 }
