--- a/style/style.scss
+++ b/style/style.scss
@@ -20,6 +20,7 @@ html, body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   color: #fff;
+  background-color: var(--red);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
