--- a/style/style.scss
+++ b/style/style.scss
@@ -5,6 +5,7 @@
   --blue-dark: #1d3557;
   --green: #50FFB1;
   --creme: #f1faee;
+  --yellow: #ecd23b;
   --spacing-s: 10px;
   --icon-size: 20px;
   --icon-size-big: 40px;
