--- a/style/style.scss
+++ b/style/style.scss
@@ -20,7 +20,7 @@ html, body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
-  color: #fff;
+  color: var(--creme);
   background-color: var(--red);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
