--- a/style/runarea.module.scss
+++ b/style/runarea.module.scss
@@ -2,3 +2,31 @@
   background-color: var(--blue-dark);
   overflow: hidden;
 }
+
+.currentRun {
+  display: flex;
+  justify-content: space-between;
+  padding: var(--spacing-s);
+  position: relative;
+  background-color: var(--blue-dark);
+  border-bottom: 1px solid var(--creme);
+
+  > div:first-child {
+    flex: 0 0 66.6%;
+  }
+}
+
+.edit-mode {
+  background: linear-gradient(to right, var(--green) 2px, transparent 2px) 0 0,
+  linear-gradient(to right, var(--green) 2px, transparent 2px) 0 100%,
+  linear-gradient(to left, var(--green) 2px, transparent 2px) 100% 0,
+  linear-gradient(to left, var(--green) 2px, transparent 2px) 100% 100%,
+  linear-gradient(to bottom, var(--green) 2px, transparent 2px) 0 0,
+  linear-gradient(to bottom, var(--green) 2px, transparent 2px) 100% 0,
+  linear-gradient(to top, var(--green) 2px, transparent 2px) 0 100%,
+  linear-gradient(to top, var(--green) 2px, transparent 2px) 100% 100%;
+
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-color: var(--blue-dark);
+}
