--- a/style/style.scss
+++ b/style/style.scss
@@ -11,6 +11,8 @@
   --icon-size-big: 40px;
   --font-size-body: 16px;
   --font-size-header: 24px;
+  --run-head-height: 85px;
+  --run-body-height: 150px;
 }
 
 html, body {
