--- a/style/singlerun.module.scss
+++ b/style/singlerun.module.scss
@@ -1,3 +1,15 @@
+.head {
+  max-height: var(--run-head-height);
+  border-bottom: 1px solid var(--creme);
+  margin-bottom: var(--spacing-s);
+}
+
+.scrollable {
+  max-height: var(--run-body-height);
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .currentRun {
   .stats {
     display: grid;
@@ -96,8 +108,6 @@
 
 .date {
   background-image: url("../assets/icons/calendar3-dark.svg");
-  border-bottom: 1px solid var(--creme);
-  padding-bottom: var(--spacing-s);
   padding-top: var(--spacing-s);
   background-color: var(--blue-light);
   color: #000;
