update react before

--- a/style/multipleruns.module.scss
+++ b/style/multipleruns.module.scss
@@ -1,5 +1,5 @@
 div.legend {
-  color: #000;
+  color: var(--anthrazit);
   background-color: var(--blue-light);
   font-family: 'Montserrat', sans-serif;
   padding: var(--spacing-s);
