--- a/style/style.scss
+++ b/style/style.scss
@@ -5,7 +5,8 @@
   --blue-dark: #1d3557;
   --green: #50FFB1;
   --creme: #f1faee;
-  --yellow: #ecd23b;
+  --yellow: #F6CF63;
+  --anthrazit: #2f353b;
   --spacing-s: 10px;
   --icon-size: 20px;
   --icon-size-big: 40px;
