--- a/style/sync.module.scss
+++ b/style/sync.module.scss
@@ -3,6 +3,7 @@
   $height: 60px;
   padding: var(--spacing-s);
   background-color: #2f353b;
+  color: var(--creme);
 
   height: $height;
   z-index: 10;
