--- a/style/multipleruns.module.scss
+++ b/style/multipleruns.module.scss
@@ -10,6 +10,6 @@ div.activeLegend {
   font-family: 'Montserrat', sans-serif;
   padding: var(--spacing-s);
   margin-bottom: var(--spacing-s);
-  background-color: var(--red);
+  background-color: var(--anthrazit);
   color: var(--creme);
 }
