--- a/style/style.scss
+++ b/style/style.scss
@@ -3,7 +3,7 @@
   --blue: #457b9d;
   --blue-light: #a8dadc;
   --blue-dark: #1d3557;
-  --green: #50FFB1;
+  --green: #48B936;
   --creme: #f1faee;
   --yellow: #F6CF63;
   --anthrazit: #2f353b;
