--- a/style/currentrun.module.scss
+++ b/style/currentrun.module.scss
@@ -1,15 +1,23 @@
+.currentRunDate {
+  background-image: url("../assets/icons/calendar3.svg");
+  background-position: var(--spacing-s) var(--spacing-s);
+  background-color: var(--red);
+  background-repeat: no-repeat;
+  color: var(--creme);
+  padding: var(--spacing-s) 0 var(--spacing-s) calc(var(--icon-size) + var(--spacing-s) * 2);
+  font-family: 'Courier Prime', monospace;
+  background-size: var(--icon-size);
+  min-height: var(--icon-size);
+  text-align: left;
+}
+
 .stats {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  justify-content: space-between;
-  padding: var(--spacing-s) var(--spacing-s) 0 var(--spacing-s);
+  padding: var(--spacing-s) 0 0 0;
   position: relative;
   background-color: var(--blue-dark);
   border-bottom: 1px solid var(--creme);
-
-  > div:first-child {
-    flex: 0 0 66.6%;
-  }
 }
 
 .singleDown:after,
