--- a/style/header.module.scss
+++ b/style/header.module.scss
@@ -14,7 +14,7 @@
   margin: 0;
   padding: 0 15px;
   font-size: var(--font-size-header);
-  line-height: 56px;
+  line-height: var(--button-size);
   font-weight: 400;
   color: #FFF;
 }
