--- a/style/style.scss
+++ b/style/style.scss
@@ -23,7 +23,8 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  //font-family: 'Montserrat', sans-serif;
+  font-family: 'Courier Prime', monospace;
   font-weight: 400;
   color: var(--creme);
   font-size: var(--font-size-body);
