--- a/style/fab.module.scss
+++ b/style/fab.module.scss
@@ -3,7 +3,7 @@
   width: var(--button-size);
   height: var(--button-size);
   border-radius: var(--spacing-s);
-  padding: 18px var(--spacing-s);
+  padding: var(--spacing-s);
   right: var(--spacing-s);
   bottom: var(--spacing-s);
   z-index: 1000;
