--- a/style/sync.module.scss
+++ b/style/sync.module.scss
@@ -46,6 +46,7 @@
     margin-right: var(--spacing-s);
     font-size: var(--icon-size);
     line-height: var(--icon-size);
+    color: var(--anthrazit);
   }
 
   .insert {
